--- a/.github/workflows/rank.yml
+++ b/.github/workflows/rank.yml
@@ -1,9 +1,9 @@
 name: Update
 
-on: push
-#   schedule:
-#     # * is a special character in YAML so you have to quote this string
-#     - cron: '0 21 * * *'
+on:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: '* 3 22 * *'
 
 jobs:
   Update:
