--- a/.github/workflows/rank.yml
+++ b/.github/workflows/rank.yml
@@ -1,9 +1,6 @@
 name: Update
 
-on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron: '* 3 22 * *'
+on: push
 
 jobs:
   Update:
